fix RequestNormalizerGenerationTest test